--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi I am a full stack developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Salinas California</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Learnign new languages and creating digital content</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Social Media content creator</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>in California/p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>TO be able to be a content creator and digital media creator</p>
     </section>
 
     <footer id="footer">
